# backend.ai-docs-webui

./: .gitignore  .readthedocs.yaml  README.md  generate_po.sh  pyproject.toml  release.sh  translate_po.py
docs/: VERSION  build_local_pdf_kr.sh  build_pdf.sh  conf.local.py  conf.original.py  conf.py  disclaimer.rst  index.rst  quickstart.rst  requirements.txt
docs/LLM_playground/: LLM_playground.rst
docs/_templates/: layout.html
docs/admin_menu/: admin_menu.rst
docs/admin_user_keypair_management/: admin_user_keypair_management.rst
docs/agent_summary/: agent_summary.rst
docs/allocate_cpu_mem/: allocate_cpu_mem.rst
docs/allocate_gpu/: allocate_gpu.rst
docs/appendix/: appendix.rst  resource_and_scheduler.rst
docs/chat/: chat.rst
docs/cluster_session/: cluster_session.rst
docs/dashboard/: dashboard.rst
docs/faq/: faq.rst
docs/header/: header.rst
docs/import_run/: import_run.rst
docs/installation/: installation.rst
docs/license_agreement/: license_agreement.rst
docs/login/: login.rst
docs/ml_kernels/: ml_kernels.rst
docs/model_serving/: model_serving.rst
docs/mount_vfolder/: mount_vfolder.rst
docs/multicontainer_session/: multicontainer_session.rst
docs/my_environments/: my_environments.rst
docs/overview/: overview.rst
docs/references/: references.rst
docs/resource_and_scheduler/: resource_and_scheduler.rst
docs/resource_limit/: resource_limit.rst
docs/session_list/: session_list.rst
docs/session_page/: session_page.rst
docs/session_use/: session_use.rst
docs/sessions_all/: sessions_all.rst
docs/share_vfolder/: share_vfolder.rst
(+101 files in other folders)
