[tool.poetry]
name = "backend.ai-docs-console"
version = "0.1.0"
description = "User's guide for Backend.AI GUI Console."
authors = ["Lablup Inc. <contact@lablup.com>"]
license = "GNU General Public License v3.0"
readme = 'README.md'
repository = "https://github.com/lablup/backend.ai-docs-console"
homepage = "https://github.com/lablup/backend.ai-docs-console"
keywords = ['backend.ai', 'documentation', 'console']

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here
sphinx = "^3.0.4"
recommonmark = "^0.6.0"
sphinx_rtd_theme = "^0.4.3"
sphinx-intl = "^2.0.1"

[tool.poetry.dev-dependencies]
# pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
